# docker-nginx-tester

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/src/mysite/: main.py
frontend/static/: index.html
