[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mysite"
description = "just playing around with docker"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"
dependencies = [
    "fastapi",
    "motor",
]
[tool.setuptools.packages.find]
where = ["src"]